@@ -2,6 +2,7 @@
 v6.2.0-git
 ----------
 
+[mms] Add mailbox size information retrieval to dynamic view (Request #12965).
 [mms] Display unread message count in title via favicon bubbles, if browser
       supports.
 [mms] Abstracted maillog code.
